<resources>
    <string name="app_name">IslandCook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="top_recipes">Top Recipes 🔥</string>
    <string name="all">All</string>
    <string name="dessert">Dessert</string>
    <string name="pasta">Pasta</string>
    <string name="dinner">Dinner</string>
    <string name="potatoes">Potatoes</string>
    <string name="cheese">Cheese</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="somthing_sweeet">Up for something sweet?</string>
    <string name="dinner_ideas">Dinner Ideas 🌮</string>
    <string name="we_know_you_love_pasta">4 U, Pasta-lovers 🍝</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="my_recipes">My recipes</string>
    <string name="favorites">Favorites</string>
    <string name="empty">It\'s seems like there\'s nothing to see here  👀</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="difficulty">Difficulty</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="tags">Tags</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="step">Step</string>
    <string name="button_add_recipe">Button Add Recipe</string>
    <string name="url_image">Url Image</string>
</resources>