<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTintMode="add"
    tools:context=".usecases.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-10dp"
                android:text="@string/home_title"
                android:textAlignment="viewStart"
                android:textAppearance="@style/display_medium"
                android:textColor="@color/secondary10" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="6dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/all"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_dessert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/dessert"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_pasta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/pasta"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_dinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/dinner"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_lunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/lunch"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_breaksfast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/breakfast"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_potatoes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/potatoes"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_cheese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/cheese"
                        android:textAppearance="@style/label_large"
                        android:textColor="@color/text"
                        app:chipBackgroundColor="@color/tertiary90"
                        app:chipMinHeight="34dp"
                        app:chipStrokeColor="@color/tertiary90"
                        app:layout_constraintBottom_toBottomOf="@+id/chip_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/chip_medium"
                        app:layout_constraintTop_toTopOf="@+id/chip_medium" />
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/easy"
                    android:textAppearance="@style/label_large"
                    android:textColor="@color/text"
                    app:chipBackgroundColor="@color/tertiary90"
                    app:chipMinHeight="36dp"
                    app:chipStrokeColor="@color/tertiary90" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:textAppearance="@style/label_large"
                    android:textColor="@color/text"
                    app:chipBackgroundColor="@color/tertiary90"
                    app:chipMinHeight="36dp"
                    app:chipStrokeColor="@color/tertiary90" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/hard"
                    android:textAppearance="@style/label_large"
                    android:textColor="@color/text"
                    app:chipBackgroundColor="@color/tertiary90"
                    app:chipMinHeight="36dp"
                    app:chipStrokeColor="@color/tertiary90" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_top_recipes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:text="@string/top_recipes"
                android:textAppearance="@style/headline_medium"
                android:textColor="@color/text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_rv_top_recipes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_rv_top_recipes"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_recipe_home" />

                        <include layout="@layout/item_recipe_home" />

                        <include layout="@layout/item_recipe_home" />
                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_top_recipes_dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:text="@string/dinner_ideas"
                android:textAppearance="@style/headline_medium"
                android:textColor="@color/text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_rv_dinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_recipes_dinner"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_rv_top_recipes_dinner"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_recipe_home" />

                        <include layout="@layout/item_recipe_home" />

                        <include layout="@layout/item_recipe_home" />
                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_top_recipes_pasta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:text="@string/we_know_you_love_pasta"
                android:textAppearance="@style/headline_medium"
                android:textColor="@color/text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_rv_pasta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_top_recipes_pasta"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_rv_top_recipes_pasta"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/item_recipe_home" />

                        <include layout="@layout/item_recipe_home" />

                        <include layout="@layout/item_recipe_home" />
                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>